# esp-insights

./: .codespellrc  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  FEATURES.md  README.md
.github/workflows/: upload_components.yml
.gitlab/ci/: pre_commit.yml
components/esp_diag_data_store/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/esp_diag_data_store/include/: esp_diag_data_store.h
components/esp_diag_data_store/src/: esp_diag_data_store.c
components/esp_diag_data_store/src/rtc_store/: rtc_store.c  rtc_store.h
components/esp_diag_data_store/test/: README.md  test_data_store.c
components/esp_diag_data_store/test/python_tests/: python_test_requirement.txt  stress_tests.py
components/esp_diagnostics/: CMakeLists.txt  Kconfig  idf_component.yml
components/esp_diagnostics/include/: esp_diagnostics.h  esp_diagnostics_metrics.h  esp_diagnostics_system_metrics.h  (+1 more)
components/esp_insights/: CMakeLists.txt  Kconfig  idf_component.yml  project_include.cmake
components/rtc_store/: CMakeLists.txt  Kconfig
components/rtc_store/include/: rtc_store.h
components/rtc_store/src/: rbuf.c  rtc_store.c
components/rtc_store/test/: CMakeLists.txt  README.md  test_data_store.c
components/rtc_store/test/python_tests/: stress_tests.py
docs/: Doxyfile  README.md  conf.py  gen-dxd.py  index.rst
docs/c-apis/: esp_diag_data_store.rst  esp_diag_metrics.rst  esp_diag_variables.rst  esp_diagnostics.rst  esp_insights.rst  index.rst
examples/: README.md
examples/common/app_wifi/: CMakeLists.txt
examples/diagnostics_smoke_test/: CMakeLists.txt  Makefile  README.md  sdkconfig.ci
examples/minimal_diagnostics/: CMakeLists.txt  Makefile  README.md  sdkconfig.ci  sdkconfig.defaults
idf-patches/: Diagnostics-support-in-esp-idf-tag-v4.1.2-and-tag-v4.2.2.patch
unit_test_app/: CMakeLists.txt  README.md  partitions.csv  pytest.ini  pytest_unit_tests.py  run_test.py  sdkconfig.ci.linux  tests_sequence.json
unit_test_app/main/: CMakeLists.txt  Kconfig  main.c
(+27 files in other folders)
